welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: Missing closing brace `}' assumed here
override def run(){
^PatternPicture:1: error: expected start of definition
override def run(){
         ^PatternPicture:6: error: expected class or object definition
def marque(){
^PatternPicture:11: error: expected class or object definition
def carr?(x : Int, sens : Boolean){
^