welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run(){
 
}


def marque(){
  baisseBrosse()
	leveBrosse()
}

def carr?(x : Int, sens : Boolean){
  x match {
    case 1 => setCouleurBrosse(Color.yellow)
    case 2 => setCouleurBrosse(Color.red)
    case 3 => setCouleurBrosse(Color.blue)
    case 4 => setCouleurBrosse(Color.green)
    
  } 
  for(i<- 1 to 2){
    faireL()
    avance()
    faireL/()
    
  }
  
	
 
def faireL(){
  avance()
  gauche()
  marque()
  avance()
  gauche()
  avance()
  marque()
  gauche()
  avance()
  gauche()
}

def faireL/(){
  marque()
  avance()
  gauche()
  avance()
  marque()
  gauche()
  avance()
  gauche()
  avance()
  gauche()
}